Prevented hover background showing on home menu item on mobile nav

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -151,6 +151,9 @@ html, body {
 .nav-item.home {
     display: none;
 }
+.nav-item.home:hover {
+    background: unset !important;
+}
 .nav-item.exchange {
     border: 2px solid #fff;
     padding: 0px 5px;
